--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -107,7 +107,7 @@ body.crlngn-ui {
 }
 
 body.crlngn-ui{
-  /* Rest of the CSS remains the same */
+  --checkbox-checkmark-color: var(--color-dark-1);
   --control-active-border-color: var(--color-highlights);
   --control-active-icon-color: var(--color-light-1);
   --color-text-light-highlight: var(--color-light-1);
@@ -159,22 +159,26 @@ body.crlngn-ui{
     --input-background-alt: var(--color-cool-5);
     --input-text-color: var(--color-light-3);
     --input-placeholder-color: var(--color-light-4);
+    --checkbox-checkmark-color: var(--color-light-1);
 
-    input, 
-    select, 
-    code-mirror {
-      --input-border-color: var(--color-secondary-25);
-      --input-focus-outline-color: var(--color-highlights);
-      /*--input-background-color: var(--color-dark-bg);*/
-      --input-background-color: var(--color-cool-4);
-      --input-background-alt: var(--color-cool-5);
-      --input-text-color: var(--color-light-3);
-      --input-placeholder-color: var(--color-light-4);
+    .standard-form, .sidebar-tab{
+      input, 
+      select, 
+      code-mirror {
+        --input-border-color: var(--color-secondary-25);
+        --input-focus-outline-color: var(--color-highlights);
+        /*--input-background-color: var(--color-dark-bg);*/
+        --input-background-color: var(--color-cool-4);
+        --input-background-alt: var(--color-cool-5);
+        --input-text-color: var(--color-light-3);
+        --input-placeholder-color: var(--color-light-4);
+      }
+
+      button{
+        --button-hover-background-color: var(--color-warm-3);
+      }
     }
   
-    button{
-      --button-hover-background-color: var(--color-warm-3);
-    }
   }
   
 }
@@ -258,34 +262,29 @@ body.crlngn-ui.crlngn-theme-gold-chocolate {
   --color-secondary-b-75: rgba(34, 34, 54, 0.75);
   --color-secondary-b-90: rgba(34, 34, 54, 0.90);
   
-  --color-warm-1: rgb(184, 153, 54);
+  --color-warm-1: rgb(213, 190, 116);
   --color-warm-2: rgb(192, 165, 77);
-  --color-warm-3: rgb(213, 190, 116);
-  
-  &.theme-dark{
-    --color-warm-1: rgb(213, 190, 116);
-    --color-warm-2: rgb(192, 165, 77);
-    --color-warm-3: rgb(184, 153, 54);
-  }
+  --color-warm-3: rgb(184, 153, 54);
+
 }
 
 /* THEME - ROYAL BLOOD */ 
 body.crlngn-ui.crlngn-theme-royal-blood {
-  --color-highlights: rgb(127, 18, 36);
-  --color-highlights-15: rgba(127, 18, 36, 0.15);
-  --color-highlights-25: rgba(127, 18, 36, 0.25);
-  --color-highlights-50: rgba(127, 18, 36, 0.5);
-  --color-highlights-75: rgba(127, 18, 36, 0.75);
-  --color-highlights-90: rgba(127, 18, 36, 0.9);
-  --color-scrollbar: rgba(127, 18, 36, 0.7);
-  --color-border-highlight-alt: rgba(127, 18, 36, 0.9); 
-	--color-border-highlight: rgba(127, 18, 36, 1);
-  --color-shadow-highlight: rgba(127, 18, 36, 0.5); 
-	--color-shadow-primary: rgba(97, 11, 25, 0.8);
-  --color-border-light-primary: rgba(97, 11, 25, 0.5);
-  --color-border-light-highlight: rgba(127, 18, 36, 1);
-  --color-underline-header: rgba(127, 18, 36, 1);
-  --color-underline-active: rgba(127, 18, 36, 1);
+  --color-highlights: rgb(148, 19, 23);
+  --color-highlights-15: rgba(148, 19, 23, 0.15);
+  --color-highlights-25: rgba(148, 19, 23, 0.25);
+  --color-highlights-50: rgba(148, 19, 23, 0.5);
+  --color-highlights-75: rgba(148, 19, 23, 0.75);
+  --color-highlights-90: rgba(148, 19, 23, 0.9);
+  --color-scrollbar: rgba(148, 19, 23, 0.7);
+  --color-border-highlight-alt: rgba(148, 19, 23, 0.9); 
+	--color-border-highlight: rgba(148, 19, 23, 1);
+  --color-shadow-highlight: rgba(148, 19, 23, 0.5); 
+	--color-shadow-primary: rgba(95, 22, 27, 0.8);
+  --color-border-light-primary: rgba(95, 22, 27, 0.5);
+  --color-border-light-highlight: rgba(148, 19, 23, 1);
+  --color-underline-header: rgba(148, 19, 23, 1);
+  --color-underline-active: rgba(148, 19, 23, 1);
 	--color-text-hyperlink: rgb(186, 62, 62);
 
   --color-secondary: rgb(40, 31, 49);
@@ -299,16 +298,9 @@ body.crlngn-ui.crlngn-theme-royal-blood {
   --color-secondary-b-75: rgba(20, 17, 25, 0.75);
   --color-secondary-b-90: rgba(20, 17, 25, 0.9);
   
-  --color-warm-1: rgb(95, 22, 27);
-  --color-warm-2: rgb(127, 18, 36);
-  --color-warm-3: rgb(137, 48, 53);
-  
-  
-  &.theme-dark{
-    --color-warm-1: rgb(137, 48, 53);
-    --color-warm-2: rgb(127, 18, 36);
-    --color-warm-3: rgb(95, 22, 27);
-  }
+  --color-warm-1: rgb(177, 51, 55);
+  --color-warm-2: rgb(148, 19, 23);
+  --color-warm-3: rgb(95, 22, 27);
 }
 
 /* THEME - DARK SORCERY */
@@ -341,16 +333,10 @@ body.crlngn-ui.crlngn-theme-dark-sorcery {
   --color-secondary-b-75: rgba(14, 34, 36, 0.75);
   --color-secondary-b-90: rgba(14, 34, 36, 0.9);
   
-  --color-warm-1: rgb(60, 31, 85);
+  --color-warm-1: rgb(159, 128, 189);
   --color-warm-2: rgb(139, 98, 196);
-  --color-warm-3: rgb(99, 77, 119);
-  
-  
-  &.theme-dark{
-    --color-warm-1: rgb(99, 77, 119);
-    --color-warm-2: rgb(139, 98, 196);
-    --color-warm-3: rgb(60, 31, 85);
-  }
+  --color-warm-3: rgb(97, 53, 135);
+
 }
 
 /* THEME - tangerine */ 
@@ -383,14 +369,7 @@ body.crlngn-ui.crlngn-theme-tangerine {
   --color-secondary-b-75: rgba(20, 17, 25, 0.75);
   --color-secondary-b-90: rgba(20, 17, 25, 0.9);
   
-  --color-warm-1: rgb(159, 91, 39);
+  --color-warm-1: rgb(221, 155, 104);
   --color-warm-2: rgb(220, 120, 43);
-  --color-warm-3: rgb(194, 128, 78);
-  
-  
-  &.theme-dark{
-    --color-warm-1: rgb(194, 128, 78);
-    --color-warm-2: rgb(220, 120, 43);
-    --color-warm-3: rgb(159, 91, 39);
-  }
+  --color-warm-3: rgb(161, 86, 29);
 }
